# learnOpenGL

./: .gitignore  CMakeLists.txt
assets/: porn.avif  room.mtl
includes/: Animation.h  Assimp_GLM_helpers.h  Bone.h  Model.h  TextureLoader.h  shaderLoader.h
includes/glad/: glad.h
shaders/: fragment.glsl  fragment2.glsl  light.fragment.glsl  vertex.glsl
src/: Camera.h  Model.cpp  TextureLoader.cpp  glad.c  main.cpp  shaderLoader.cpp
